WIP Добавлено чтение описаний свойств, методов, событий Добавлен парсинг глобального контекста